--- a/src/components/Profile/postForm/PostForm.module.css
+++ b/src/components/Profile/postForm/PostForm.module.css
@@ -1,6 +1,6 @@
 .postForm {
     display: grid;
-    grid-template-rows: 50px;
+    grid-template-rows: 100px;
     grid-template-columns: 500px 80px;
     grid-gap: 15px;
     margin: 10px;
@@ -9,6 +9,9 @@
 .postForm__textarea {
     resize: none;
     padding: 10px 8px 5px 12px;
+    width: 510px;
+    height: 75px;
+    box-sizing: border-box;
 }
 
 .postForm__textarea:focus {
