--- a/src/components/Profile/avatar/Avatar.module.css
+++ b/src/components/Profile/avatar/Avatar.module.css
@@ -1,16 +1,15 @@
 .avatar {
     margin-top: 5px;
     display: inline-flex;
-    width: 500px;
+    width: 800px;
     box-sizing: border-box;
     margin-bottom: 10px;
-    height: 100px;
+    height: 200px;
     align-items: center;
 }
 
 .avatar__img {
-    height: 100px;
-    border-radius: 50px;
+    height: 200px;
 }
 
 .avatar__status {
@@ -27,4 +26,48 @@
     font-style: italic;
     cursor: pointer;
     text-decoration: underline;
+}
+
+.avatar__img:hover + .upload_label {
+    display: block;
+}
+
+.upload_label:hover {
+    display: block;
+}
+
+.upload_input {
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
+
+.upload_label {
+    display: none;
+    position: absolute;
+    background-color: #888;
+    color: #fff;
+    border-radius: 1rem;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    font-weight: 100;
+    height: 1rem;
+    line-height: 1rem;
+    padding: 0.5rem 1rem;
+    text-align: center;
+}
+
+.upload_input:focus + label,
+.upload_input + label:hover {
+    background-color: #f15d22;
+}
+
+.upload_input:focus + label {
+    outline: 1px dotted #000;
 }
