--- a/src/components/Profile/avatar/Avatar.module.css
+++ b/src/components/Profile/avatar/Avatar.module.css
@@ -1,25 +1,35 @@
-.avatar {
+.info {
     margin-top: 5px;
-    display: inline-flex;
-    width: 800px;
+    display: flex;
     box-sizing: border-box;
-    margin-bottom: 10px;
-    height: 200px;
     align-items: center;
+}
+
+.info__block {
+    margin-left: 20px;
+}
+
+.avatar__block {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    position: relative;
 }
 
 .avatar__img {
     height: 200px;
 }
 
-.avatar__status {
+.info__status {
+    display: inline-block;
     margin-left: 10px;
     padding: 5px 10px;
     box-sizing: border-box;
     cursor: pointer;
 }
 
-.avatar__statusEmpty {
+.info__statusEmpty {
+    display: inline-block;
     margin-left: 10px;
     padding: 5px 10px;
     box-sizing: border-box;
@@ -50,17 +60,16 @@
 .upload_label {
     display: none;
     position: absolute;
-    background-color: #888;
+    background-color: rgba(100, 100, 100, 0.7);
     color: #fff;
     border-radius: 1rem;
     cursor: pointer;
-    font-family: 'Poppins', sans-serif;
     font-size: 1rem;
-    font-weight: 100;
     height: 1rem;
     line-height: 1rem;
     padding: 0.5rem 1rem;
     text-align: center;
+    bottom: 10px;
 }
 
 .upload_input:focus + label,
